--- a/html/invoice.html
+++ b/html/invoice.html
@@ -102,7 +102,7 @@
 
      }
      .list li:last-child{
-      border-top: 2px solid #333;
+      border-top: 2ZAAaaapx solid #333;
      }
     </style>
   </head>
@@ -111,7 +111,7 @@
       <div class="heading">
         <div class="heading-topic">
           <h1>QOUTE</h1>
-          <span>#WQH12342</span>
+          <strong>#WQH12342</strong>
         </div>
         <div class="heading-date">
           <p>Issue Date: 12/11/11</p>
@@ -160,18 +160,18 @@
       <div class="listx">
         <ul class="list">
           <li>
-            <strong>sub total</strong>
-            <span>$1371.00</span>
+            <strong>Sub total</strong>
+            <strong>$1371.00</strong>
           </li>
 
           <li>
             <strong>Vat(4%)</strong>
-            <span>$54.84</span>
+            <strong>$54.84</strong>
           </li>
          
           <li>
             <strong>Total</strong>
-            <span>$1425.84</span>
+            <strong>$1425.84</strong>
           </li>
           </ul>
       </div>
