--- a/html/survey2.html
+++ b/html/survey2.html
@@ -31,6 +31,9 @@
         list-style-type: none;
         padding-left: 0;
       }
+      .style {
+        font-size: medium;
+      }
     </style>
   </head>
   <body>
@@ -59,7 +62,7 @@
         </li>
       </ul>
     </div>
-    <p>Do you have any comments or suggestions?</p>
+    <p class="style">Do you have any comments or suggestions?</p>
     <textarea type="text" name="text" id="text">
 comment your suggestions</textarea
     >
