uichange in the body

--- a/tablex.html
+++ b/tablex.html
@@ -8,7 +8,8 @@
         body {
             color: #333;
             background-color: bisque;
-            font-size: 2rem;
+            font-size: 4rem;
+            font-family: 'Courier New', Courier, monospace;
         }
 
         table, tr, th, td {
